--- a/TP_Intermedio/Ejercicio_5/notebook/Notebook_Consultas.ipynb
+++ b/TP_Intermedio/Ejercicio_5/notebook/Notebook_Consultas.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "5dda3912-fba0-466a-a6a5-2298533a00a3",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "01d4eed2-bdbb-4769-814f-8430e25695f5",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "c84d1f07-da43-43d4-b729-ec239eddc569",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        " (6, '2023', 'SE', 'FT', 'Applied Scientist', 222200, 'USD', 222200, 'US', 0, 'US', 'L')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db89bf31-661a-43fe-b374-19123ebcb3b2",
+   "id": "20874f1c",
    "metadata": {},
    "source": [
     "## Consulta 1:\n",
-    "* ¿Cuántos clientes habituales hay? y ¿Cuántos clientes nuevos hay?."
+    "* ¿Cantidad de personas en las 12 posiciones laborales mas populosas de la encuesta?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "019d995f-460a-41ff-a611-0505f85ea4b8",
    "metadata": {},
    "outputs": [
@@ -233,8 +233,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@app-postgres-db:5432/amir_deals\n",
-      "1 rows affected.\n"
+      " * postgresql://postgres:***@app-postgres-db:5432/ds_salaries\n",
+      "12 rows affected.\n"
      ]
     },
     {
@@ -242,20 +242,75 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>current_clients</th>\n",
-       "        <th>new_clients</th>\n",
+       "        <th>job_title</th>\n",
+       "        <th>cantidad</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>2030</td>\n",
-       "        <td>462</td>\n",
+       "        <td>Data Engineer</td>\n",
+       "        <td>1040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Data Scientist</td>\n",
+       "        <td>840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Data Analyst</td>\n",
+       "        <td>612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Machine Learning Engineer</td>\n",
+       "        <td>289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Analytics Engineer</td>\n",
+       "        <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Data Architect</td>\n",
+       "        <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Research Scientist</td>\n",
+       "        <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Applied Scientist</td>\n",
+       "        <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Data Science Manager</td>\n",
+       "        <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Research Engineer</td>\n",
+       "        <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ML Engineer</td>\n",
+       "        <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Data Manager</td>\n",
+       "        <td>29</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(2030, 462)]"
+       "[('Data Engineer', 1040),\n",
+       " ('Data Scientist', 840),\n",
+       " ('Data Analyst', 612),\n",
+       " ('Machine Learning Engineer', 289),\n",
+       " ('Analytics Engineer', 103),\n",
+       " ('Data Architect', 101),\n",
+       " ('Research Scientist', 82),\n",
+       " ('Applied Scientist', 58),\n",
+       " ('Data Science Manager', 58),\n",
+       " ('Research Engineer', 37),\n",
+       " ('ML Engineer', 34),\n",
+       " ('Data Manager', 29)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,15 +318,11 @@
    "source": [
     "%%sql\n",
     "\n",
-    "select \n",
-    "    (select count(client)\n",
-    "    from amir_deals\n",
-    "    where client = 'Current') as Current_Clients , \n",
-    "    (select count(client)\n",
-    "    from amir_deals\n",
-    "    where client = 'New') as New_Clients\n",
-    "from amir_deals\n",
-    "group by Current_Clients , New_Clients;"
+    "select job_title, count(*) AS cantidad\n",
+    "    from ds_salaries\n",
+    "    group by job_title\n",
+    "    order by cantidad DESC\n",
+    "    LIMIT 12;\n"
    ]
   },
   {
@@ -280,7 +331,13 @@
    "metadata": {},
    "source": [
     "### Respuesta 1:\n",
-    "* Se tiene muchos Clientes Habituales y pocos Clientes Nuevos."
+    "* Las 5 posiciones mas numerosas son las siguientes:\n",
+    "\n",
+    "1. Data Engineer con\t1040\n",
+    "2. Data Scientist con\t840\n",
+    "3. Data Analyst con 612\n",
+    "4. Machine Learning Engineer con\t289\n",
+    "5. Analytics Engineer con\t103"
    ]
   },
   {
@@ -289,21 +346,21 @@
    "metadata": {},
    "source": [
     "## Consulta 2:\n",
-    "* ¿Cuáles son los productos más comercializados y que dejan mayores ganancias? y ¿Cuáles son los productos menos comercializados y que dejan menores ganancias?."
+    "* ¿De las 10 posiciones con mas presencia, cuales son los salarios promedio?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2606d8ae-12a5-408f-8fdf-1ac5c55a4d83",
+   "execution_count": 39,
+   "id": "ae8f7b16-4f7e-4171-b83e-1c95a54d542c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@app-postgres-db:5432/amir_deals\n",
-      "11 rows affected.\n"
+      " * postgresql://postgres:***@app-postgres-db:5432/ds_salaries\n",
+      "12 rows affected.\n"
      ]
     },
     {
@@ -311,92 +368,101 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>type_of_product</th>\n",
-       "        <th>times_traded</th>\n",
-       "        <th>amount_traded</th>\n",
+       "        <th>job_title</th>\n",
+       "        <th>promedio</th>\n",
+       "        <th>cantidad</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product B</td>\n",
-       "        <td>868</td>\n",
-       "        <td>4201464.12</td>\n",
+       "        <td>Data Engineer</td>\n",
+       "        <td>142785.734615384615</td>\n",
+       "        <td>1040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product D</td>\n",
-       "        <td>560</td>\n",
-       "        <td>2853171.44</td>\n",
+       "        <td>Data Scientist</td>\n",
+       "        <td>140869.765476190476</td>\n",
+       "        <td>840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product A</td>\n",
-       "        <td>322</td>\n",
-       "        <td>1683493.28</td>\n",
+       "        <td>Data Analyst</td>\n",
+       "        <td>108716.227124183007</td>\n",
+       "        <td>612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product C</td>\n",
-       "        <td>210</td>\n",
-       "        <td>711185.30</td>\n",
+       "        <td>Machine Learning Engineer</td>\n",
+       "        <td>154690.726643598616</td>\n",
+       "        <td>289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product F</td>\n",
-       "        <td>154</td>\n",
-       "        <td>766517.08</td>\n",
+       "        <td>Analytics Engineer</td>\n",
+       "        <td>152368.631067961165</td>\n",
+       "        <td>103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product H</td>\n",
-       "        <td>112</td>\n",
-       "        <td>496385.26</td>\n",
+       "        <td>Data Architect</td>\n",
+       "        <td>161713.772277227723</td>\n",
+       "        <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product I</td>\n",
-       "        <td>98</td>\n",
-       "        <td>383674.34</td>\n",
+       "        <td>Research Scientist</td>\n",
+       "        <td>161214.195121951220</td>\n",
+       "        <td>82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product E</td>\n",
-       "        <td>70</td>\n",
-       "        <td>342601.14</td>\n",
+       "        <td>Applied Scientist</td>\n",
+       "        <td>190264.482758620690</td>\n",
+       "        <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product N</td>\n",
-       "        <td>42</td>\n",
-       "        <td>261894.78</td>\n",
+       "        <td>Data Science Manager</td>\n",
+       "        <td>191278.775862068966</td>\n",
+       "        <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product G</td>\n",
-       "        <td>28</td>\n",
-       "        <td>186790.66</td>\n",
+       "        <td>Research Engineer</td>\n",
+       "        <td>163108.378378378378</td>\n",
+       "        <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Product J</td>\n",
-       "        <td>28</td>\n",
-       "        <td>104327.44</td>\n",
+       "        <td>ML Engineer</td>\n",
+       "        <td>158352.441176470588</td>\n",
+       "        <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Data Manager</td>\n",
+       "        <td>116613.344827586207</td>\n",
+       "        <td>29</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('Product B', 868, Decimal('4201464.12')),\n",
-       " ('Product D', 560, Decimal('2853171.44')),\n",
-       " ('Product A', 322, Decimal('1683493.28')),\n",
-       " ('Product C', 210, Decimal('711185.30')),\n",
-       " ('Product F', 154, Decimal('766517.08')),\n",
-       " ('Product H', 112, Decimal('496385.26')),\n",
-       " ('Product I', 98, Decimal('383674.34')),\n",
-       " ('Product E', 70, Decimal('342601.14')),\n",
-       " ('Product N', 42, Decimal('261894.78')),\n",
-       " ('Product G', 28, Decimal('186790.66')),\n",
-       " ('Product J', 28, Decimal('104327.44'))]"
+       "[('Data Engineer', Decimal('142785.734615384615'), 1040),\n",
+       " ('Data Scientist', Decimal('140869.765476190476'), 840),\n",
+       " ('Data Analyst', Decimal('108716.227124183007'), 612),\n",
+       " ('Machine Learning Engineer', Decimal('154690.726643598616'), 289),\n",
+       " ('Analytics Engineer', Decimal('152368.631067961165'), 103),\n",
+       " ('Data Architect', Decimal('161713.772277227723'), 101),\n",
+       " ('Research Scientist', Decimal('161214.195121951220'), 82),\n",
+       " ('Applied Scientist', Decimal('190264.482758620690'), 58),\n",
+       " ('Data Science Manager', Decimal('191278.775862068966'), 58),\n",
+       " ('Research Engineer', Decimal('163108.378378378378'), 37),\n",
+       " ('ML Engineer', Decimal('158352.441176470588'), 34),\n",
+       " ('Data Manager', Decimal('116613.344827586207'), 29)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select product as type_of_product , count(product) as times_traded, sum(amount) as amount_traded\n",
-    "from amir_deals\n",
-    "group by product\n",
-    "order by count(product)  DESC, sum(amount) DESC;"
+    "\n",
+    "SELECT job_title, AVG(salaryinusd) AS promedio, count(*) AS cantidad\n",
+    "FROM ds_salaries\n",
+    "GROUP BY job_title\n",
+    "ORDER BY cantidad DESC\n",
+    "LIMIT 12;\n",
+    "\n"
    ]
   },
   {
