Documentacion Notebook consultas

--- a/TP_Intermedio/Ejercicio_5/notebook/Notebook_Consultas.ipynb
+++ b/TP_Intermedio/Ejercicio_5/notebook/Notebook_Consultas.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "id": "5dda3912-fba0-466a-a6a5-2298533a00a3",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "01d4eed2-bdbb-4769-814f-8430e25695f5",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "c84d1f07-da43-43d4-b729-ec239eddc569",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        " (6, '2023', 'SE', 'FT', 'Applied Scientist', 222200, 'USD', 222200, 'US', 0, 'US', 'L')]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "id": "019d995f-460a-41ff-a611-0505f85ea4b8",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        " ('Data Manager', 29)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,482 +471,10 @@
    "metadata": {},
    "source": [
     "### Respuesta 2:\n",
-    "* **Product B** es el más comercializado y el que más ganancia deja.\n",
-    "* **Product J** es el menos comercializado y el que menos ganancia deja."
+    "* **Data Science Manager** es la posicion mas remunerada de las primeras 10.\n",
+    "* **Data Analyst** es la posicion menos remunerada de las primeras 10.\n",
+    "* **Data Engineer y Data Scientist** las 2 posiciones mas numerosas tienen un ingreso de 140K U$s aprox."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c93ee726-ac07-4878-a24d-793d97da15e2",
-   "metadata": {},
-   "source": [
-    "## Consulta 3:\n",
-    "* ¿Qué producto tiene la mayor cantidad de clientes que lo adquieren? y ¿Qué producto tiene la menor cantidad de clientes que lo adquieren?."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6e659824-d506-45f4-b2cc-ed98005f96e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://postgres:***@app-postgres-db:5432/amir_deals\n",
-      "11 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>product</th>\n",
-       "        <th>number_of_customers_per_product</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product B</td>\n",
-       "        <td>32158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product D</td>\n",
-       "        <td>22848</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product A</td>\n",
-       "        <td>13622</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product C</td>\n",
-       "        <td>6552</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product F</td>\n",
-       "        <td>5964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product H</td>\n",
-       "        <td>5208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product I</td>\n",
-       "        <td>4368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product E</td>\n",
-       "        <td>1050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product G</td>\n",
-       "        <td>1050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product N</td>\n",
-       "        <td>728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product J</td>\n",
-       "        <td>280</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Product B', 32158),\n",
-       " ('Product D', 22848),\n",
-       " ('Product A', 13622),\n",
-       " ('Product C', 6552),\n",
-       " ('Product F', 5964),\n",
-       " ('Product H', 5208),\n",
-       " ('Product I', 4368),\n",
-       " ('Product E', 1050),\n",
-       " ('Product G', 1050),\n",
-       " ('Product N', 728),\n",
-       " ('Product J', 280)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "select product , sum(num_users) as number_of_customers_per_product\n",
-    "from amir_deals\n",
-    "group by product\n",
-    "order by sum(num_users) DESC;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f696ce1f-8bbe-4924-8128-f8c96f2c6537",
-   "metadata": {},
-   "source": [
-    "### Respuesta3:\n",
-    "* **Product B** es el que tiene la mayor cantidad de clientes.\n",
-    "* **Product J** es el que tiene la menor cantidad de clientes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6cbb7ba2-b232-44a4-a133-5dad50843aee",
-   "metadata": {},
-   "source": [
-    "## Consulta 4:\n",
-    "* ¿Con qué productos amid ganó dinero? y ¿con qué productos amid perdió dinero?."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "3172b672-09a1-4667-87c1-5972004c6d60",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://postgres:***@app-postgres-db:5432/amir_deals\n",
-      "18 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>product</th>\n",
-       "        <th>status</th>\n",
-       "        <th>amount_won_or_lost</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product A</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>1289878.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product A</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>393614.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product B</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>2972568.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product B</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>1228895.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product C</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>473917.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product C</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>237268.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product D</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>1404217.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product D</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>1448954.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product E</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>133462.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product E</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>209138.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product F</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>585300.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product F</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>181216.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product G</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>186790.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product H</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>485359.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product H</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>11025.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product I</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>383674.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product J</td>\n",
-       "        <td>Lost</td>\n",
-       "        <td>104327.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product N</td>\n",
-       "        <td>Won</td>\n",
-       "        <td>261894.78</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Product A', 'Won', Decimal('1289878.38')),\n",
-       " ('Product A', 'Lost', Decimal('393614.90')),\n",
-       " ('Product B', 'Won', Decimal('2972568.48')),\n",
-       " ('Product B', 'Lost', Decimal('1228895.64')),\n",
-       " ('Product C', 'Won', Decimal('473917.22')),\n",
-       " ('Product C', 'Lost', Decimal('237268.08')),\n",
-       " ('Product D', 'Won', Decimal('1404217.08')),\n",
-       " ('Product D', 'Lost', Decimal('1448954.36')),\n",
-       " ('Product E', 'Won', Decimal('133462.70')),\n",
-       " ('Product E', 'Lost', Decimal('209138.44')),\n",
-       " ('Product F', 'Won', Decimal('585300.38')),\n",
-       " ('Product F', 'Lost', Decimal('181216.70')),\n",
-       " ('Product G', 'Lost', Decimal('186790.66')),\n",
-       " ('Product H', 'Won', Decimal('485359.28')),\n",
-       " ('Product H', 'Lost', Decimal('11025.98')),\n",
-       " ('Product I', 'Won', Decimal('383674.34')),\n",
-       " ('Product J', 'Lost', Decimal('104327.44')),\n",
-       " ('Product N', 'Won', Decimal('261894.78'))]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "select product , status, sum(amount) as amount_won_or_lost\n",
-    "from amir_deals\n",
-    "group by product, status\n",
-    "order by product asc, status desc;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b37a174c-5535-4a3d-88bf-84f28a17615f",
-   "metadata": {},
-   "source": [
-    "### Respuesta 4:\n",
-    "* Amid siempre perdió dinero cuando vendió el producto **G&J**.\n",
-    "* Pero siempre ganó dinero cuando vendio el producto **I&N**.\n",
-    "* Con los productos **D&E** Perdió más de lo que Ganó.\n",
-    "* Con el resto de los productos ganó más de lo que perdió."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "93565fa3-c944-4907-b425-b55fb04c53ca",
-   "metadata": {},
-   "source": [
-    "## Consulta 5:\n",
-    "* ¿Qué productos fué comprado solo por clientes nuevos? y ¿Qué productos fué comprado solo por clientes habtuales?."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f84d7054-66d1-4fd4-a0d5-7303212e9ea1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://postgres:***@app-postgres-db:5432/amir_deals\n",
-      "20 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>product</th>\n",
-       "        <th>client</th>\n",
-       "        <th>amount_client_current_new</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product A</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>1576316.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product A</td>\n",
-       "        <td>New</td>\n",
-       "        <td>107177.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product B</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>3415476.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product B</td>\n",
-       "        <td>New</td>\n",
-       "        <td>785987.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product C</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>427731.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product C</td>\n",
-       "        <td>New</td>\n",
-       "        <td>283453.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product D</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>2488821.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product D</td>\n",
-       "        <td>New</td>\n",
-       "        <td>364350.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product E</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>290706.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product E</td>\n",
-       "        <td>New</td>\n",
-       "        <td>51894.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product F</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>591585.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product F</td>\n",
-       "        <td>New</td>\n",
-       "        <td>174931.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product G</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>126876.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product G</td>\n",
-       "        <td>New</td>\n",
-       "        <td>59914.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product H</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>485359.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product H</td>\n",
-       "        <td>New</td>\n",
-       "        <td>11025.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product I</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>283521.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product I</td>\n",
-       "        <td>New</td>\n",
-       "        <td>100152.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product J</td>\n",
-       "        <td>New</td>\n",
-       "        <td>104327.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Product N</td>\n",
-       "        <td>Current</td>\n",
-       "        <td>261894.78</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Product A', 'Current', Decimal('1576316.00')),\n",
-       " ('Product A', 'New', Decimal('107177.28')),\n",
-       " ('Product B', 'Current', Decimal('3415476.26')),\n",
-       " ('Product B', 'New', Decimal('785987.86')),\n",
-       " ('Product C', 'Current', Decimal('427731.64')),\n",
-       " ('Product C', 'New', Decimal('283453.66')),\n",
-       " ('Product D', 'Current', Decimal('2488821.30')),\n",
-       " ('Product D', 'New', Decimal('364350.14')),\n",
-       " ('Product E', 'Current', Decimal('290706.22')),\n",
-       " ('Product E', 'New', Decimal('51894.92')),\n",
-       " ('Product F', 'Current', Decimal('591585.12')),\n",
-       " ('Product F', 'New', Decimal('174931.96')),\n",
-       " ('Product G', 'Current', Decimal('126876.26')),\n",
-       " ('Product G', 'New', Decimal('59914.40')),\n",
-       " ('Product H', 'Current', Decimal('485359.28')),\n",
-       " ('Product H', 'New', Decimal('11025.98')),\n",
-       " ('Product I', 'Current', Decimal('283521.56')),\n",
-       " ('Product I', 'New', Decimal('100152.78')),\n",
-       " ('Product J', 'New', Decimal('104327.44')),\n",
-       " ('Product N', 'Current', Decimal('261894.78'))]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "select product , client, sum(amount) as amount_client_current_new\n",
-    "from amir_deals\n",
-    "group by product, client\n",
-    "order by product asc, client asc;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd6c98b5-224c-4179-b69d-0c3063d46fa4",
-   "metadata": {},
-   "source": [
-    "### Respuesta 5:\n",
-    "* **Product J** fué comprado solo por clientes New.\n",
-    "* **Product N** fué comprado solo por clientes Current.\n",
-    "* El resto de los productos fué comprado por ambos clientes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57e7fa6a-3e35-4f6a-b061-aefadf28bf70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -965,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
